2001-12-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sftp.c (sftp_xfer_read, sftp_xfer_stop): fix typo.
	
	* sftp.c: remove unused variables.
	* ftp.c (ftp_cat, rftp_xfer_start): remove unused variables.

	* main.c: ifdef USE_SFTP sftp options handling and usage.

	* ftp.c (rftp_xfer_read): select fileno(f) for reading.

2001-12-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c (set_file_blocking): Return old blocking mode.

	* ftp.c (_ftp_update_transfer): display time stalled in m:s when
	more than 59 seconds.  Don't display total size if unknown.

	* sftp.c (_sftp_start_ssh) send status packet in case of error.

	* sftp.c: rewritten without stdio.
	
	* ftp.c: delete (now unused) function ftp_histf.

	* sftp.c: rename SSH_FX_PROTO_VERSION to SFTP_PROTO_VERSION
	
	* sftp.c: supersede SFTP_FFL_READ and SFTP_FFL_WRITE with
	SSH_FXF_READ and SSH_FXF_WRITE, respectively.

2001-12-19  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* display.c (disp_status): add flags argument; adapt callers.

2001-12-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c (set_file_blocking): new function.

	* Makefile.am: don't create files with output redirection
	directly, use temporary files and mv.

	* ftp.c: (ftp_cat): adapt to be usable with both protocols.
	* ftp.c (rftp_xfer_start, rftp_xfer_stop, rftp_xfer_read,
	rftp_xfer_write, rftp_xfer_eof): new method functions.
	
2001-12-13  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c: garbage collect code not ENABLE_TRANSFER_RATE.
	
	* fn_basic.c (fn_deidle), ftp.c (rftp_noop): rename method to
	deidle.

	* fn_select (aux_download, aux_pipe, aux_upload): adapt to
	stor/retr method interface changes.

	* ftp.c: declare all internal functions static.
	* ftp.c (ftp_init, ftp_reconnect): make protocol independent.
	* ftp.c (ftp_cat, rftp_fclose, rftp_retr, rftp_stor): change
	server side files to void *.

	* ftp.c (ftp_remember_host, ftp_remember_user): new functions.
